--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="fr">
   <head>
+    <link id="favicon-dynamique" rel="icon" href="">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="RestoHub - Hub Orbital pour restaurants. Partagez vos informations de manière interactive." />
